<resources>
    <string name="app_name">Tech News</string>
    <string name="article_name">Long placeholder location that should wrap to more than 2 lines of text</string>
    <string name="author_name">Authors Name</string>
    <string name="date">Date</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="please_try_again_latter">Please, check your the format of your date and try again latter</string>
    <string name="please_try">Please, Try</string>
    <string name="turning_off_airplane_mode">Turning off airplane mode</string>
    <string name="checking_signal_in_your_area">checking signal in your area</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Settings</string>

    <string name="settings_date_cutoff_label">From Date</string>
    <string name="settings_date_cutoff_key" translatable="false">from-date</string>
    <string name="settings_date_cutoff_default" translatable="false">2000-01-01</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_date_value</string>

    <string name="settings_order_by_date_label">Date</string>
    <string name="settings_order_by_date_value" translatable="false">newest</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_relevant_label">Relevance</string>
    <string name="settings_order_by_most_relevant_value" translatable="false">relevance</string>



    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_title">Subject</string>
    <string name="settings_order_by_handle" translatable="false">q</string>
    <string name="settings_order_bydefault" translatable="false">@string/settings_order_by_software_value</string>

    <string name="settings_order_by_software_label">Software</string>
    <string name="settings_order_by_software_value" translatable="false">software</string>

    <string name="settings_order_by_hardware_label">Hardware</string>
    <string name="settings_order_by_hardware_value" translatable="false">hardware</string>


    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_database_label">Database</string>
    <string name="settings_order_by_datebase_value" translatable="false">database</string>

    <string name="settings_order_by_virtual_reality_label">Virtual reality</string>
    <string name="settings_order_by_virtual_reality_value" translatable="false">virtual reality</string>

    <string name="settings_order_by_artificial_inteligence_label">Artificial inteligence</string>
    <string name="settings_order_by_artificial_inteligence_value" translatable="false">artificial inteligence</string>

    <string name="settings_order_by_cybersecurity_label">Cybersecurity</string>
    <string name="settings_order_by_cybersecurity_value" translatable="false">cybersecurity</string>




</resources>
