<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title"
    >

    <EditTextPreference
        android:key="@string/settings_date_cutoff_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_date_cutoff_label"
        android:textColor="@color/colorPrimaryDark"
        android:hint="yyyy-mm-dd"
        />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_bydefault"
        android:entries="@array/settings_order_by_titles"
        android:entryValues="@array/settings_order_by_topic"
        android:key="@string/settings_order_by_handle"
        android:title="@string/settings_order_by_title" />



</PreferenceScreen>