<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="@dimen/item_divider_on_list"
        android:orientation="vertical" />

    <!-- Empty view is only visible when the list has no items. -->
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAppearance="?android:textAppearanceMedium" />

    <RelativeLayout
        android:id="@+id/loading_spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Loading indicator is only shown before the first load -->
        <ProgressBar
            android:id="@+id/loading_indicator"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/light_blue" />

        <ImageView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/tech_news" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/no_news"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        >

        <ImageView
            android:id="@+id/no_news_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/no_news" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_news_image"
            android:layout_centerHorizontal="true"
            android:text="@string/please_try_again_latter"
            android:textColor="@color/black"
            android:textSize="@dimen/_32sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="invisible"
        >

        <TextView
            android:id="@+id/text_no_internet"
            style="@style/NoInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection"
            android:textSize="@dimen/_24sp" />

        <ImageView
            android:id="@+id/no_internet_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_no_internet"
            android:layout_centerHorizontal="true"
            android:src="@drawable/sad_face" />

        <TextView
            android:id="@+id/text_try"
            style="@style/NoInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_internet_image"
            android:text="@string/please_try" />

        <TextView
            android:id="@+id/text_try_1"
            style="@style/NoInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_try"
            android:text="@string/turning_off_airplane_mode" />

        <TextView
            android:id="@+id/text_try_2"
            style="@style/NoInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_try_1"
            android:text="Turning on mobile data or wifi" />

        <TextView
            android:id="@+id/text_try_3"
            style="@style/NoInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_try_2"
            android:text="@string/checking_signal_in_your_area" />

    </RelativeLayout>

</RelativeLayout>