<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:layout_marginBottom="@dimen/_16dp"
    android:layout_marginTop="@dimen/_32dp"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/_16dp"
    android:paddingLeft="@dimen/_16dp"
    android:paddingRight="@dimen/_16dp"
    android:paddingStart="@dimen/_16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/tech_news_icon"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/_10dp"
            tools:text="category" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginStart="@dimen/item_divider_on_list"
        android:layout_weight="1"
        android:paddingLeft="@dimen/_16dp">

        <TextView
            android:id="@+id/article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_16sp"
            tools:text="@string/article_name" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/article"
            android:ellipsize="end"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/_14sp"
            tools:text="@string/author_name" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/article"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/_14sp"
            tools:text="@string/date" />
    </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/play_button"
                android:layout_gravity="center_vertical"/>

</LinearLayout>
